tests/NormalTests/paczka1/fuzzy1/64363067.err
Error in line 3: CkuOqcvBR A408 94,8
Error in line 8: nyq S669 20,4
Error in line 24: VBmCiUFkI A74 88,0
Error in line 25: VBmCiUFkI A408 61,1
Error in line 31: nyq A74 54,4
Error in line 20: CkuOqcvBR S669 25,9
Error in line 28: A408 S669 2,0
Error in line 35: VBmCiUFkI S669 13,2
